Update profile image

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <aside class="sidebar">
       <div class="profile">
         <div class="avatar">
-          <img src="assets/profile.jpg" alt="Foto de perfil">
+          <img src="assets/FOTO%202.jpeg" alt="Foto de perfil">
         </div>
         <div class="name">Kevin Anthony Naveros Ayquipa</div>
         <p class="role">Economía – PUCP · Retail & Commercial · Data/Analytics</p>
