--- a/index.html
+++ b/index.html
@@ -437,7 +437,8 @@
         <section id="contact" class="card" style="margin-top:18px">
           <h2>Contact</h2>
           <div class="contactgrid">
-            <div class="contactbox"><b>Email</b><br><span>tuemail@dominio.com</span></div>
+            <div class="contactbox"><b>Email</b><br><span>kevinmaverick92@gmail.com</span></div>
+            <div class="contactbox"><b>Email</b><br><span>a20165881@pucp.edu.pe</span></div>
             <div class="contactbox"><b>GitHub</b><br><span>github.com/Naveros043011</span></div>
           </div>
           <div class="item">
