--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@
             </div>
             <div class="item">
               <h3>Educación</h3>
-              <p class="meta">PUCP — Economía (8vo ciclo) · IDAT — Especialización en Microsoft Excel</p>
+              <p class="meta">PUCP — Economía (8vo ciclo)</p>
+               <p class="meta">IDAT — Especialización en Microsoft Excel</p>
             </div>
           </section>
         </div>
