--- a/index.html
+++ b/index.html
@@ -3,409 +3,262 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kevin Anthony Naveros Ayquipa | CV</title>
-  <meta name="description" content="Economía PUCP. Retail & Commercial (Adidas). Analista Funcional (Danysoft). Excel, Power BI, SQL, SAP, Python." />
+  <title>Portfolio – Diseño A</title>
 
   <style>
     :root{
-      --bg:#ffffff;
-      --ink:#0f172a;
-      --muted:#475569;
-      --line:#e2e8f0;
-      --card:#ffffff;
-      --accent:#0b5cff;
-      --shadow: 0 16px 40px rgba(15,23,42,.10);
+      --bg:#0b1020;
+      --panel:#0f172a;
+      --text:#e5e7eb;
+      --muted:#94a3b8;
+      --line:rgba(148,163,184,.18);
+      --accent:#60a5fa;
+      --shadow:0 18px 50px rgba(0,0,0,.35);
       --r:18px;
-      --max: 1040px;
+      --max:1100px;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0}
+    html{scroll-behavior:smooth}
     body{
+      margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      color:var(--ink);
+      color:var(--text);
       background:
-        radial-gradient(900px 480px at 10% 0%, rgba(11,92,255,.08), transparent 60%),
-        radial-gradient(900px 520px at 90% 10%, rgba(11,92,255,.06), transparent 55%),
+        radial-gradient(900px 600px at 15% 10%, rgba(96,165,250,.18), transparent 60%),
+        radial-gradient(900px 600px at 85% 20%, rgba(52,211,153,.12), transparent 55%),
         var(--bg);
-      line-height:1.55;
+      line-height:1.6;
     }
     a{color:inherit;text-decoration:none}
-    .wrap{max-width:var(--max);margin:0 auto;padding:26px 18px 54px}
-    .top{
-      display:flex; align-items:center; justify-content:space-between; gap:14px;
-      position:sticky; top:0;
-      background: rgba(255,255,255,.78);
+
+    /* NAV */
+    header{
+      position:sticky; top:0; z-index:50;
       backdrop-filter: blur(10px);
+      background: rgba(2,6,23,.55);
       border-bottom:1px solid var(--line);
-      padding:12px 0;
-      z-index:20;
+    }
+    .nav{
+      max-width:var(--max);
+      margin:auto;
+      padding:12px 18px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:14px;
     }
     .brand{
-      display:flex; align-items:center; gap:12px;
-      min-width: 260px;
+      font-weight:800;
+      letter-spacing:.3px;
     }
-    .mark{
-      width:40px;height:40px;border-radius:14px;
-      background: linear-gradient(135deg, rgba(11,92,255,1), rgba(11,92,255,.35));
-      box-shadow: var(--shadow);
+    .menu{
+      display:flex; gap:10px; flex-wrap:wrap;
     }
-    .brand b{display:block;font-size:14px;letter-spacing:.2px}
-    .brand span{display:block;font-size:12px;color:var(--muted);margin-top:2px}
-    .nav{display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end}
-    .nav a{
-      font-size:13px; color:var(--muted);
-      padding:8px 10px; border-radius:999px;
-      border:1px solid transparent;
-    }
-    .nav a:hover{border-color: var(--line); background:#f8fafc; color:var(--ink)}
-    .btn{
-      display:inline-flex; align-items:center; justify-content:center; gap:10px;
-      padding:10px 12px;
-      border-radius:12px;
-      border:1px solid var(--line);
-      background:#fff;
-      font-weight:700;
+    .menu a{
       font-size:13px;
+      color:var(--muted);
+      padding:8px 10px;
+      border-radius:999px;
+      border:1px solid transparent;
+      transition:.2s;
     }
-    .btn.primary{
-      background: var(--accent);
-      border-color: var(--accent);
-      color:#fff;
+    .menu a.active,
+    .menu a:hover{
+      color:var(--text);
+      border-color:var(--line);
+      background:rgba(96,165,250,.08);
     }
 
-    /* Hero */
-    .hero{
-      margin-top:18px;
-      display:grid;
-      grid-template-columns: 1.3fr .7fr;
-      gap:18px;
-      align-items:stretch;
+    /* LAYOUT */
+    .wrap{max-width:var(--max);margin:auto;padding:26px 18px 60px}
+    section{
+      margin-top:70px;
+      opacity:0;
+      transform:translateY(24px);
+      transition:opacity .7s ease, transform .7s ease;
+    }
+    section.visible{
+      opacity:1;
+      transform:none;
     }
     .card{
-      background: var(--card);
+      background:rgba(15,23,42,.65);
       border:1px solid var(--line);
-      border-radius: var(--r);
-      box-shadow: var(--shadow);
-      padding:22px;
+      border-radius:var(--r);
+      box-shadow:var(--shadow);
+      padding:26px;
     }
-    .headline{
+    h1{
       margin:0;
-      font-size:40px;
+      font-size:44px;
       letter-spacing:-.02em;
       line-height:1.1;
     }
-    .sub{
-      margin:10px 0 0;
-      color:var(--muted);
-      font-size:15px;
-      max-width: 70ch;
-    }
-    .kpis{display:flex; flex-wrap:wrap; gap:10px; margin-top:16px}
-    .pill{
-      border:1px solid var(--line);
-      background:#f8fafc;
-      padding:7px 10px;
-      border-radius:999px;
-      font-size:13px;
-      color:var(--ink);
-    }
-    .cta{display:flex; gap:10px; flex-wrap:wrap; margin-top:16px}
-    .profile{
-      display:flex; flex-direction:column; gap:12px;
-    }
-    .photo{
-      width:100%;
-      aspect-ratio: 4/5;
-      border-radius: 16px;
-      overflow:hidden;
-      border:1px solid var(--line);
-      background:#f1f5f9;
-    }
-    .photo img{
-      width:100%; height:100%;
-      object-fit: cover;
-      object-position: center 18%;
-      display:block;
-    }
-    .kv{
-      display:flex; justify-content:space-between; gap:12px;
-      padding:10px 0; border-top:1px solid var(--line);
-      font-size:13px;
-    }
-    .kv:first-of-type{border-top:none;padding-top:0}
-    .kv span{color:var(--muted)}
-    .kv b{color:var(--ink)}
-
-    /* Sections */
-    .grid{
-      margin-top:18px;
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap:18px;
-    }
     h2{
       margin:0 0 12px;
-      font-size:12px;
+      font-size:13px;
       letter-spacing:.12em;
       text-transform:uppercase;
       color:var(--muted);
+    }
+    p{margin:0;color:var(--muted)}
+    .spacer{height:10px}
+
+    /* HERO */
+    .hero{
+      margin-top:28px;
+      display:grid;
+      grid-template-columns:1.3fr .7fr;
+      gap:18px;
+    }
+    .heroBox{
+      padding:30px;
+    }
+    .hero p{
+      margin-top:12px;
+      max-width:65ch;
+    }
+    .pills{
+      display:flex; gap:10px; flex-wrap:wrap; margin-top:16px;
+    }
+    .pill{
+      border:1px solid var(--line);
+      background:rgba(2,6,23,.25);
+      padding:7px 10px;
+      border-radius:999px;
+      font-size:13px;
+      color:var(--text);
+    }
+
+    /* GRID SECTIONS */
+    .grid{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:18px;
     }
     .item{
       padding:14px 0;
       border-top:1px solid var(--line);
     }
-    .item:first-of-type{border-top:none;padding-top:0}
-    .item h3{margin:0;font-size:16px}
-    .meta{margin:6px 0 0; color:var(--muted); font-size:13px}
-    ul{margin:10px 0 0; padding-left:18px}
-    li{margin:6px 0}
-    .tags{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px}
-    .tag{
-      font-size:12px;color:var(--muted);
-      border:1px solid var(--line);
-      background:#f8fafc;
-      padding:6px 8px;border-radius:999px;
-    }
+    .item:first-child{border-top:none;padding-top:0}
 
-    /* Projects */
-    .projGrid{
-      display:grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap:12px;
-      margin-top:10px;
-    }
-    .proj{
-      border:1px solid var(--line);
-      border-radius: 16px;
-      padding:14px;
-      background:#fff;
-      box-shadow: 0 10px 28px rgba(15,23,42,.06);
-      min-height: 150px;
-    }
-    .proj b{display:block;margin-bottom:6px}
-    .proj p{margin:0;color:var(--muted);font-size:13px}
-    .linkrow{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-    .small{font-size:12px;color:var(--muted)}
-
-    /* Contact */
-    .contactGrid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-    .contactBox{
-      border:1px solid var(--line);
-      border-radius: 16px;
-      padding:12px;
-      background:#fff;
-      box-shadow: 0 10px 28px rgba(15,23,42,.06);
-      font-size:14px;
+    /* FOOTER */
+    footer{
+      margin-top:40px;
+      text-align:center;
       color:var(--muted);
+      font-size:13px;
     }
-    .contactBox b{color:var(--ink)}
-    .footer{margin-top:18px;text-align:center;color:var(--muted);font-size:13px}
 
-    @media (max-width: 980px){
+    @media(max-width:900px){
       .hero{grid-template-columns:1fr}
       .grid{grid-template-columns:1fr}
-      .projGrid{grid-template-columns:1fr}
-      .headline{font-size:34px}
-      .top{position:relative}
+      h1{font-size:36px}
     }
   </style>
 </head>
 
 <body>
-  <div class="wrap">
-    <div class="top">
-      <div class="brand">
-        <div class="mark" aria-hidden="true"></div>
-        <div>
-          <b>Kevin Naveros</b>
-          <span>Economía PUCP · Data/Analytics · Retail/Comercial</span>
-        </div>
-      </div>
 
-      <nav class="nav" aria-label="Navegación">
-        <a href="#about">Sobre mí</a>
-        <a href="#experience">Experiencia</a>
-        <a href="#skills">Habilidades</a>
-        <a href="#projects">Proyectos</a>
-        <a href="#contact">Contacto</a>
-      </nav>
-
-      <a class="btn primary" href="#contact">Contactar</a>
-    </div>
-
-    <!-- HERO -->
-    <section class="hero" id="about">
-      <div class="card">
-        <h1 class="headline">Kevin Anthony Naveros Ayquipa</h1>
-        <p class="sub">
-          Estudiante de Economía (PUCP) con experiencia en análisis funcional, análisis financiero y finanzas corporativas,
-          además de operación retail y atención al cliente. Manejo Excel, Power BI, SQL, SAP y Python con enfoque en eficiencia
-          y toma de decisiones basada en datos.
-        </p>
-
-        <div class="kpis">
-          <span class="pill">📍 Lima, Perú</span>
-          <span class="pill">📊 KPIs & Reportes</span>
-          <span class="pill">⚙️ Procesos & Documentación</span>
-          <span class="pill">🧠 Data Science (en progreso)</span>
-        </div>
-
-        <div class="cta">
-          <a class="btn primary" href="#projects">Ver proyectos</a>
-          <a class="btn" href="https://github.com/Naveros043011" target="_blank" rel="noopener">GitHub</a>
-          <a class="btn" href="#" onclick="alert('Luego reemplaza este botón con tu link de LinkedIn'); return false;">LinkedIn</a>
-        </div>
-
-        <div class="item" style="margin-top:16px">
-          <h2>Logro destacado</h2>
-          <p class="meta">
-            Becario con beca completa Summer School 2026 PUCP (Q-LAB & Fin-LAB): Ciencia de Datos aplicada a Macro-Finanzas
-            (Python para finanzas, ML/DL en series de tiempo, NLP financiero y Asset Pricing).
-          </p>
-        </div>
-      </div>
-
-      <aside class="card profile">
-        <div class="photo">
-          <img src="assets/profile.jpg" alt="Foto de Kevin Naveros">
-        </div>
-        <div class="kv"><span>Rol</span><b>Retail & Commercial (Adidas)</b></div>
-        <div class="kv"><span>Herramientas</span><b>Excel · Power BI · SQL · SAP · Python</b></div>
-        <div class="kv"><span>Enfoque</span><b>Ventas · KPIs · Procesos</b></div>
-        <div class="small">Tip: luego reemplaza tu correo y LinkedIn en “Contacto”.</div>
-      </aside>
-    </section>
-
-    <!-- EXPERIENCE -->
-    <section class="grid" id="experience">
-      <div class="card">
-        <h2>Experiencia</h2>
-
-        <div class="item">
-          <h3>Adidas Group — Internship Program (Retail & Commercial)</h3>
-          <p class="meta">Enero 2025 – Actualidad</p>
-          <ul>
-            <li>Análisis de ventas y KPIs (ventas, ticket promedio, conversión).</li>
-            <li>Atención al cliente con enfoque en experiencia personalizada y fidelización.</li>
-            <li>Gestión operativa: caja, facturación, devoluciones y soporte en campañas.</li>
-            <li>Control de inventarios, reposición, seguimiento de stock y reporte de quiebres.</li>
-          </ul>
-          <div class="tags">
-            <span class="tag">Excel</span>
-            <span class="tag">SAP</span>
-            <span class="tag">Retail Ops</span>
-            <span class="tag">KPIs</span>
-          </div>
-        </div>
-
-        <div class="item">
-          <h3>DANYSOFT E.I.R.L — Analista Funcional Junior</h3>
-          <p class="meta">Enero 2024 – Diciembre 2024</p>
-          <ul>
-            <li>Emisión de facturas, abonos y notas de crédito.</li>
-            <li>Documentación funcional y toma de requerimientos.</li>
-            <li>Mejora de procesos; análisis/automatización con Excel, Power BI y SQL.</li>
-          </ul>
-          <div class="tags">
-            <span class="tag">Excel</span>
-            <span class="tag">Power BI</span>
-            <span class="tag">SQL</span>
-            <span class="tag">Procesos</span>
-          </div>
-        </div>
-
-        <div class="item">
-          <h3>Marathon Sports — Asesor de Ventas & Operaciones</h3>
-          <p class="meta">Marzo 2019 – Noviembre 2021</p>
-          <ul>
-            <li>Sistemas de cobro, ventas, inventarios y visual merchandising según estándares.</li>
-          </ul>
-          <div class="tags">
-            <span class="tag">Retail</span>
-            <span class="tag">SAP</span>
-            <span class="tag">Excel</span>
-          </div>
-        </div>
-
-        <div class="item">
-          <h3>Educación</h3>
-          <p class="meta">PUCP — Economía (8vo ciclo) · 2016 – Actualidad</p>
-          <p class="meta">IDAT — Especialización en Microsoft Excel · 2022</p>
-        </div>
-      </div>
-
-      <div class="card" id="skills">
-        <h2>Habilidades</h2>
-
-        <div class="item">
-          <h3>Herramientas</h3>
-          <div class="tags">
-            <span class="tag">Excel (macros, tablas dinámicas)</span>
-            <span class="tag">Power BI (ETL, dashboards)</span>
-            <span class="tag">SQL (consultas, joins)</span>
-            <span class="tag">SAP (FI, S/4HANA)</span>
-            <span class="tag">Python (básico)</span>
-            <span class="tag">Gestión de procesos & documentación</span>
-          </div>
-        </div>
-
-        <div class="item">
-          <h3>Idiomas</h3>
-          <p class="meta">Inglés — Intermedio (Centro de Idiomas PUCP – Intermedio 4)</p>
-        </div>
-
-        <div class="item">
-          <h3>Fortalezas</h3>
-          <div class="tags">
-            <span class="tag">Análisis</span>
-            <span class="tag">Organización</span>
-            <span class="tag">Orientado a resultados</span>
-            <span class="tag">Trabajo colaborativo</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- PROJECTS -->
-    <section class="card" id="projects" style="margin-top:18px">
-      <h2>Proyectos</h2>
-      <div class="projGrid">
-        <div class="proj">
-          <b>Macro-Finance Data Science (Q-LAB & Fin-LAB)</b>
-          <p>Formación en Python financiero, ML/DL para series de tiempo, NLP financiero y Asset Pricing.</p>
-        </div>
-        <div class="proj">
-          <b>Dashboard KPIs (Plantilla)</b>
-          <p>Diseño de reporte para seguimiento de ventas, conversión y ticket promedio (Power BI/Excel).</p>
-        </div>
-        <div class="proj">
-          <b>Automatización de reportes (Plantilla)</b>
-          <p>Consolidación de datos con SQL y visualización en Power BI para reducir tiempos operativos.</p>
-        </div>
-      </div>
-      <div class="linkrow">
-        <span class="small">Cuando tengas repos, reemplazo estas tarjetas por links reales.</span>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section class="card" id="contact" style="margin-top:18px">
-      <h2>Contacto</h2>
-      <div class="contactGrid">
-        <div class="contactBox"><b>Email</b><br><span>tuemail@dominio.com</span></div>
-        <div class="contactBox"><b>GitHub</b><br><span>github.com/Naveros043011</span></div>
-      </div>
-      <div class="item">
-        <h3>Referencias</h3>
-        <p class="meta">Disponibles bajo petición.</p>
-      </div>
-    </section>
-
-    <div class="footer">© <span id="y"></span> Kevin Naveros · GitHub Pages</div>
+<header>
+  <div class="nav">
+    <div class="brand">PORTFOLIO</div>
+    <nav class="menu">
+      <a href="#home" class="active">Home</a>
+      <a href="#about">About</a>
+      <a href="#resume">Resume</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </div>
+</header>
 
-  <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
-  </script>
+<main class="wrap">
+
+  <!-- HOME -->
+  <section id="home" class="visible">
+    <div class="card hero">
+      <div class="heroBox">
+        <h1>Nombre Apellido</h1>
+        <p>Texto de impacto breve. Aquí va tu rol y propuesta de valor.</p>
+        <div class="pills">
+          <span class="pill">Área</span>
+          <span class="pill">Especialidad</span>
+          <span class="pill">Ubicación</span>
+        </div>
+      </div>
+      <div class="card">
+        <p>Bloque visual / foto / resumen corto</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ABOUT -->
+  <section id="about">
+    <div class="card">
+      <h2>About</h2>
+      <p>Texto descriptivo. Solo diseño.</p>
+    </div>
+  </section>
+
+  <!-- RESUME -->
+  <section id="resume">
+    <div class="grid">
+      <div class="card">
+        <h2>Experience</h2>
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+      </div>
+      <div class="card">
+        <h2>Skills</h2>
+        <div class="item">Skill 1</div>
+        <div class="item">Skill 2</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- PROJECTS -->
+  <section id="projects">
+    <div class="card">
+      <h2>Projects</h2>
+      <div class="item">Project Card</div>
+      <div class="item">Project Card</div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact">
+    <div class="card">
+      <h2>Contact</h2>
+      <p>Email / Links</p>
+    </div>
+  </section>
+
+  <footer>© <span id="y"></span> Portfolio</footer>
+</main>
+
+<script>
+  // Año
+  document.getElementById("y").textContent = new Date().getFullYear();
+
+  // Reveal on scroll
+  const sections = document.querySelectorAll("section");
+  const navLinks = document.querySelectorAll(".menu a");
+
+  const obs = new IntersectionObserver(entries=>{
+    entries.forEach(e=>{
+      if(e.isIntersecting){
+        e.target.classList.add("visible");
+        navLinks.forEach(l=>l.classList.toggle(
+          "active",
+          l.getAttribute("href") === "#"+e.target.id
+        ));
+      }
+    });
+  },{threshold:.35});
+
+  sections.forEach(s=>obs.observe(s));
+</script>
+
 </body>
 </html>
