--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Portfolio – Diseño A</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Portfolio — Diseño C</title>
 
   <style>
     :root{
       --bg:#0b1020;
       --panel:#0f172a;
+      --panel2:rgba(15,23,42,.7);
       --text:#e5e7eb;
       --muted:#94a3b8;
       --line:rgba(148,163,184,.18);
@@ -33,127 +34,109 @@
 
     /* NAV */
     header{
-      position:sticky; top:0; z-index:50;
+      position:sticky; top:0; z-index:40;
       backdrop-filter: blur(10px);
       background: rgba(2,6,23,.55);
       border-bottom:1px solid var(--line);
     }
     .nav{
-      max-width:var(--max);
-      margin:auto;
+      max-width:var(--max); margin:auto;
       padding:12px 18px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:14px;
+      display:flex; align-items:center; justify-content:space-between; gap:14px;
     }
-    .brand{
-      font-weight:800;
-      letter-spacing:.3px;
-    }
-    .menu{
-      display:flex; gap:10px; flex-wrap:wrap;
-    }
+    .brand{font-weight:800; letter-spacing:.3px}
+    .menu{display:flex; gap:10px; flex-wrap:wrap}
     .menu a{
-      font-size:13px;
-      color:var(--muted);
-      padding:8px 10px;
-      border-radius:999px;
-      border:1px solid transparent;
-      transition:.2s;
+      font-size:13px; color:var(--muted);
+      padding:8px 10px; border-radius:999px; border:1px solid transparent;
     }
-    .menu a.active,
-    .menu a:hover{
-      color:var(--text);
-      border-color:var(--line);
+    .menu a.active, .menu a:hover{
+      color:var(--text); border-color:var(--line);
       background:rgba(96,165,250,.08);
     }
 
     /* LAYOUT */
-    .wrap{max-width:var(--max);margin:auto;padding:26px 18px 60px}
+    .wrap{max-width:var(--max); margin:auto; padding:28px 18px 60px}
     section{
       margin-top:70px;
-      opacity:0;
-      transform:translateY(24px);
+      opacity:0; transform:translateY(24px);
       transition:opacity .7s ease, transform .7s ease;
     }
-    section.visible{
-      opacity:1;
-      transform:none;
-    }
+    section.visible{opacity:1; transform:none}
+
     .card{
-      background:rgba(15,23,42,.65);
+      background:var(--panel2);
       border:1px solid var(--line);
       border-radius:var(--r);
       box-shadow:var(--shadow);
-      padding:26px;
+      padding:22px;
     }
-    h1{
-      margin:0;
-      font-size:44px;
-      letter-spacing:-.02em;
-      line-height:1.1;
-    }
-    h2{
-      margin:0 0 12px;
-      font-size:13px;
-      letter-spacing:.12em;
-      text-transform:uppercase;
-      color:var(--muted);
-    }
-    p{margin:0;color:var(--muted)}
-    .spacer{height:10px}
+    h1{margin:0; font-size:42px; letter-spacing:-.02em}
+    h2{margin:0 0 10px; font-size:13px; letter-spacing:.12em; text-transform:uppercase; color:var(--muted)}
+    p{margin:0; color:var(--muted)}
 
     /* HERO */
     .hero{
-      margin-top:28px;
-      display:grid;
-      grid-template-columns:1.3fr .7fr;
-      gap:18px;
+      display:grid; grid-template-columns:1.2fr .8fr; gap:18px;
     }
-    .heroBox{
-      padding:30px;
-    }
-    .hero p{
-      margin-top:12px;
-      max-width:65ch;
-    }
-    .pills{
-      display:flex; gap:10px; flex-wrap:wrap; margin-top:16px;
-    }
+    .pills{display:flex; gap:10px; flex-wrap:wrap; margin-top:14px}
     .pill{
       border:1px solid var(--line);
       background:rgba(2,6,23,.25);
-      padding:7px 10px;
-      border-radius:999px;
-      font-size:13px;
-      color:var(--text);
+      padding:7px 10px; border-radius:999px; font-size:13px;
     }
 
-    /* GRID SECTIONS */
-    .grid{
-      display:grid;
-      grid-template-columns:1fr 1fr;
-      gap:18px;
+    /* ACCORDION */
+    .acc{
+      margin-top:10px;
+      border:1px solid var(--line);
+      border-radius:14px;
+      overflow:hidden;
+      background:rgba(2,6,23,.22);
     }
-    .item{
-      padding:14px 0;
+    .acc button{
+      width:100%; text-align:left;
+      background:none; border:none; color:var(--text);
+      padding:14px 16px;
+      display:flex; align-items:center; justify-content:space-between;
+      cursor:pointer; font-size:14px; font-weight:700;
       border-top:1px solid var(--line);
     }
-    .item:first-child{border-top:none;padding-top:0}
-
-    /* FOOTER */
-    footer{
-      margin-top:40px;
-      text-align:center;
-      color:var(--muted);
-      font-size:13px;
+    .acc button:first-child{border-top:none}
+    .acc button span{color:var(--muted); font-weight:400}
+    .acc .panel{
+      max-height:0; overflow:hidden;
+      transition:max-height .35s ease;
+      border-top:1px solid var(--line);
+      background:rgba(15,23,42,.55);
     }
+    .acc .panel .inner{padding:14px 16px; color:var(--muted)}
+    .acc button.active + .panel{max-height:240px}
+
+    /* GRID */
+    .grid{display:grid; grid-template-columns:1fr 1fr; gap:18px}
+
+    /* PROJECT CARDS */
+    .projects{
+      display:grid; grid-template-columns:repeat(3,1fr); gap:14px;
+    }
+    .proj{
+      border:1px solid var(--line); border-radius:16px;
+      background:rgba(2,6,23,.18); padding:14px;
+      transition:transform .15s ease, border-color .15s ease;
+      min-height:140px;
+    }
+    .proj:hover{transform:translateY(-2px); border-color:rgba(96,165,250,.5)}
+    .proj b{display:block; margin-bottom:6px}
+    .proj p{font-size:13px}
+
+    footer{margin-top:40px; text-align:center; color:var(--muted); font-size:13px}
 
     @media(max-width:900px){
       .hero{grid-template-columns:1fr}
       .grid{grid-template-columns:1fr}
-      h1{font-size:36px}
+      .projects{grid-template-columns:1fr}
+      h1{font-size:34px}
     }
   </style>
 </head>
@@ -178,26 +161,33 @@
   <!-- HOME -->
   <section id="home" class="visible">
     <div class="card hero">
-      <div class="heroBox">
+      <div>
         <h1>Nombre Apellido</h1>
-        <p>Texto de impacto breve. Aquí va tu rol y propuesta de valor.</p>
+        <p style="margin-top:10px">Mensaje de impacto breve. Rol y enfoque.</p>
         <div class="pills">
           <span class="pill">Área</span>
           <span class="pill">Especialidad</span>
           <span class="pill">Ubicación</span>
         </div>
       </div>
-      <div class="card">
-        <p>Bloque visual / foto / resumen corto</p>
-      </div>
+      <div class="card">Bloque visual / foto</div>
     </div>
   </section>
 
-  <!-- ABOUT -->
+  <!-- ABOUT (accordion) -->
   <section id="about">
     <div class="card">
       <h2>About</h2>
-      <p>Texto descriptivo. Solo diseño.</p>
+      <div class="acc">
+        <button class="active">Perfil <span>Resumen</span></button>
+        <div class="panel"><div class="inner">Contenido plegable.</div></div>
+
+        <button>Logros <span>Highlights</span></button>
+        <div class="panel"><div class="inner">Contenido plegable.</div></div>
+
+        <button>Intereses <span>Focus</span></button>
+        <div class="panel"><div class="inner">Contenido plegable.</div></div>
+      </div>
     </div>
   </section>
 
@@ -206,13 +196,21 @@
     <div class="grid">
       <div class="card">
         <h2>Experience</h2>
-        <div class="item">Item 1</div>
-        <div class="item">Item 2</div>
+        <div class="acc">
+          <button class="active">Rol 1 <span>Empresa</span></button>
+          <div class="panel"><div class="inner">Detalles.</div></div>
+          <button>Rol 2 <span>Empresa</span></button>
+          <div class="panel"><div class="inner">Detalles.</div></div>
+        </div>
       </div>
       <div class="card">
         <h2>Skills</h2>
-        <div class="item">Skill 1</div>
-        <div class="item">Skill 2</div>
+        <div class="acc">
+          <button class="active">Herramientas</button>
+          <div class="panel"><div class="inner">Excel · SQL · BI</div></div>
+          <button>Idiomas</button>
+          <div class="panel"><div class="inner">Nivel</div></div>
+        </div>
       </div>
     </div>
   </section>
@@ -221,8 +219,11 @@
   <section id="projects">
     <div class="card">
       <h2>Projects</h2>
-      <div class="item">Project Card</div>
-      <div class="item">Project Card</div>
+      <div class="projects">
+        <div class="proj"><b>Proyecto</b><p>Descripción corta.</p></div>
+        <div class="proj"><b>Proyecto</b><p>Descripción corta.</p></div>
+        <div class="proj"><b>Proyecto</b><p>Descripción corta.</p></div>
+      </div>
     </div>
   </section>
 
@@ -241,23 +242,36 @@
   // Año
   document.getElementById("y").textContent = new Date().getFullYear();
 
-  // Reveal on scroll
+  // Reveal + nav activo
   const sections = document.querySelectorAll("section");
   const navLinks = document.querySelectorAll(".menu a");
-
-  const obs = new IntersectionObserver(entries=>{
+  const io = new IntersectionObserver(entries=>{
     entries.forEach(e=>{
       if(e.isIntersecting){
         e.target.classList.add("visible");
         navLinks.forEach(l=>l.classList.toggle(
           "active",
-          l.getAttribute("href") === "#"+e.target.id
+          l.getAttribute("href")==="#"+e.target.id
         ));
       }
     });
   },{threshold:.35});
+  sections.forEach(s=>io.observe(s));
 
-  sections.forEach(s=>obs.observe(s));
+  // Accordion
+  document.querySelectorAll(".acc button").forEach(btn=>{
+    btn.addEventListener("click", ()=>{
+      const was = btn.classList.contains("active");
+      const parent = btn.parentElement;
+      parent.querySelectorAll("button").forEach(b=>b.classList.remove("active"));
+      parent.querySelectorAll(".panel").forEach(p=>p.style.maxHeight=null);
+      if(!was){
+        btn.classList.add("active");
+        const panel = btn.nextElementSibling;
+        panel.style.maxHeight = panel.scrollHeight+"px";
+      }
+    });
+  });
 </script>
 
 </body>
